test/libyul/yulSyntaxTests/objects/datasize_nonstring.yul
object "A" {
  code {
    pop(datasize(0))
  }
}
// ----
// TypeError 5859: (39-40='0'): Function expects string literal.
